Finished initial set up

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   	<div class="navbar-inner">
       <div class="container">
       	<div>
-      	  <%= link_to "Spirit Board", root_path, id: "logo" %>
+      	  <%= link_to "Score Board", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-left">
               <li><%#= link_to t('.teams'), teams_path %></li>
