--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,7 +32,7 @@ textarea {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
+  color: #ffffcc;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
@@ -41,7 +41,7 @@ textarea {
 }
 
 #logo:hover {
-  color: #fff;
+  color: #ccffcc;
   text-decoration: none;
 }
 
