--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'About') %>
 <h1>About</h1>
 <p>
-<b>Spirit Board App :</b> Ver 0.0
+<b>Ultimate Score Board app :</b> Ver 0.0
 </p>
