tourney crud almost complete

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -126,4 +126,15 @@ input {
   @extend .control-group;
   @extend .error;
 }
+
+/* tournaments index */
+
+.tournaments {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+  }
+}
   
