--- a/app/views/tournaments/edit.html.erb
+++ b/app/views/tournaments/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up Tourney') %>
-<h1><center>Tournament</center></h1>
+<% provide(:title, 'Edit Tourney') %>
+<h1><center>Update Tournament</center></h1>
 
 <div class="row">
   <div class="span6 offset3">
@@ -21,7 +21,7 @@
       <%= f.label :description  %>
       <%= f.text_area :description, size: "30x5" %>
 
-      <%= f.submit "Create", class: "btn btn-default btn-success" %>
+      <%= f.submit "Save Changes", class: "btn btn-default btn-success" %>
     <% end %>
   </div>
 </div>
