--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       	  <%= link_to "Score Board", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-left">
-              <li><%#= link_to t('.teams'), teams_path %></li>
+              <li><%= link_to t('.tournaments'), tournaments_path %></li>
             </ul>
           </nav>
         </div>
