--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,4 +4,5 @@
 	<p>
 	  India's Ultimate Frisbee tournament details, teams participating, players, games, scores ... are tracked and found in Ultimate Score Board.
 	</p>
+    <%= link_to "Get Started", tournaments_path, class: "btn btn-default btn-success" %>
 </div>
