--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -137,4 +137,14 @@ input {
     padding: 10px 0;
   }
 }
-  
+ 
+/* tournaments index */
+
+.teams {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+  }
+} 
