games and scores ares omewhat done

--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Sign up Team') %>
+<%= render 'shared/menu', object: @team %>
+
 <h1><center>Update Team</center></h1>
 
 <div class="row">
